refactored and did some cleanup